Remove extraneous models
